--- a/scss/style.scss
+++ b/scss/style.scss
@@ -239,7 +239,7 @@ textarea {
 		background-color: colors.$main-font-color;
 		border: 2px solid colors.$main-font-color;
 		border-radius: 4px;
-		font-size: 1.3rem;
+		font-size: 1.15rem;
 		color: colors.$h1-color;
 		font-weight: 600;
 		transition: color 0.5s linear, background-color 0.5s linear;
@@ -267,7 +267,7 @@ textarea {
 	position: absolute;
 	top: 50%;
 	font-size: 1.6rem;
-	color: #fff;
+	color: colors.$main-font-color;
 	background: none;
 	border: none;
 	cursor: pointer;
@@ -287,7 +287,7 @@ textarea {
 
 .about {
 	width: 100%;
-	padding: 0 1em 2em;
+	padding: 0 1em 3em;
 
 	&__description {
 		padding: 2em 2em 0;
@@ -300,7 +300,7 @@ textarea {
 .brand-slider {
 	position: relative;
 	width: 100%;
-	padding: 3em 1em 2em;
+	padding: 3em 1em;
 	overflow: hidden;
 
 	&__description {
@@ -310,7 +310,7 @@ textarea {
 
 	&__box {
 		display: flex;
-		margin: 2em 0;
+		margin: 3em 0;
 		animation: slideAnimation 30s linear infinite;
 	}
 
