--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ textarea {
   width: 100%;
   max-width: 100vw;
   height: 85vh;
-  margin-bottom: 3em;
+  margin: 3.5em 0 3em;
   overflow: hidden;
 }
 .slider__slide-box {
