--- a/scss/style.scss
+++ b/scss/style.scss
@@ -170,7 +170,7 @@ textarea {
 	width: 100%;
 	max-width: 100vw;
 	height: 85vh;
-	margin-bottom: 3em;
+	margin: 3.5em 0 3em;
 	overflow: hidden;
 
 	&__slide-box {
