--- a/scss/style.scss
+++ b/scss/style.scss
@@ -451,7 +451,7 @@ textarea {
 							.contact-textarea {
 								padding: 0.5em 0.8em;
 								background: none;
-								border: 2px solid colors.$main-font-color;
+								border: 0.1em solid colors.$main-font-color;
 								border-radius: 4px;
 								outline: none;
 								color: colors.$main-font-color;
@@ -468,7 +468,7 @@ textarea {
 					margin: 1.2em 0;
 					padding: 0.5em 1.2em;
 					background-color: colors.$main-font-color;
-					border: 2px solid colors.$main-font-color;
+					border: 0.1em solid colors.$main-font-color;
 					border-radius: 4px;
 					text-decoration: none;
 					font-size: 1.1rem;
