Changed photos of the main slider to webp format

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -256,6 +256,7 @@ textarea {
 		width: 100%;
 		height: 30%;
 		box-sizing: border-box;
+		// aspect-ratio: auto 640 / 360;
 
 		&--desktop {
 			display: none;
@@ -265,7 +266,7 @@ textarea {
 
 .arrow {
 	position: absolute;
-	top: 50%;
+	top: 55%;
 	font-size: 1.6rem;
 	color: colors.$main-font-color;
 	background: none;
